--- a/.github/workflows/main_ccse-project.yml
+++ b/.github/workflows/main_ccse-project.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_3469cc1dc2ac4462b37cb8033babecf1 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_677906badf22496cbce0d07e3ea58ca9 }}
+        username: ${{ secrets.DOCKER_USERNAME}}
+        password: ${{ secrets.DOCKER_PASSWORD}}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_3469cc1dc2ac4462b37cb8033babecf1 }}/adamryan2215/flask-app:${{ github.sha }}
+        tags: index.docker.io/adamryan2215/flask-app:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
