--- a/.github/workflows/main_ccse-project.yml
+++ b/.github/workflows/main_ccse-project.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.DOCKER_USERNAME}}
-        password: ${{ secrets.DOCKER_PASSWORD}}
+        username: ${{ secrets.AzureAppService_ContainerUsername_a4f141d99830414db61235797929b713 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_e5ed6efa57184e0bbf348d02aff3c2cb }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/adamryan2215/flask-app:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_a4f141d99830414db61235797929b713 }}/adamryan2215/adamryan2215/flask-app:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -46,5 +46,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'ccse-project'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_48a55d7a8e3e449b83e2dee63c6cf3bb }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_3469cc1dc2ac4462b37cb8033babecf1 }}/adamryan2215/flask-app:${{ github.sha }}'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_ef1c002c0b4544b5b5cf16ceff6f54ae }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_a4f141d99830414db61235797929b713 }}/adamryan2215/adamryan2215/flask-app:${{ github.sha }}'
