--- a/.github/workflows/main_ccse-project.yml
+++ b/.github/workflows/main_ccse-project.yml
@@ -46,6 +46,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'ccse-project'
-        slot-name: 'esdsdsh4g3fzfjht'
+        slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_ef1c002c0b4544b5b5cf16ceff6f54ae }}
         images: 'index.docker.io/adamryan2215/flask-app:${{ github.sha }}'
