--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build, Push Docker Image, and Run ZAP Scan
 
 on:
   push:
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -27,3 +26,13 @@ jobs:
       - name: Push the image to Docker Hub
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
+
+  zap_scan:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: OWASP ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.9.0
+        with:
+          target: 'https://ccse-project-esdsdsh4g3fzfjht.uksouth-01.azurewebsites.net/'
