--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,4 +25,4 @@ jobs:
 
       - name: Push the image to Docker Hub
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/flask-app:latest'
+          docker push ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
