--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -2,8 +2,6 @@ name: OWASP ZAP Scan
 
 on:
   workflow_dispatch:  # Run it manually from the GitHub Actions tab
-  schedule:
-    - cron: '0 2 * * *'  # Optional: run every day at 2 AM UTC
 
 jobs:
   zap-scan:
@@ -24,5 +22,5 @@ jobs:
       - name: Run OWASP ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.9.0
         with:
-          target: 'https://your-app.azurewebsites.net'
+          target: 'https://ccse-project-esdsdsh4g3fzfjht.uksouth-01.azurewebsites.net/'
           fail_action: false
